# mlb-injury-scraper

./: .dockerignore  .gitignore  Dockerfile  INTEGRATION_GUIDE.md  Justfile  README.md  config.toml  http_server.py  pyproject.toml  scraper.py  server.py
.github/workflows/: docker-build.yml
examples/: http_client_example.py  mcp_http_client_example.py
scripts/: test_scraper.py
