[project]
name = "mlb-injury-scraper"
version = "0.1.0"
description = "MLB injury data scraper with MCP server capabilities"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "lxml>=4.9.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sse-starlette>=1.6.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mlb-injury-server = "server:main"
mlb-injury-http-server = "http_server:run_http_server"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["scraper.py", "server.py", "http_server.py"]
